app-in-apps/yaml/template/service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: placeholder-service-loadbalanced
  labels:
    app: placeholder
  namespace: placeholder
spec:
  selector:
    app: placeholder
  ports:
    - name: dnstcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dnsudp
      port: 53
      protocol: UDP
      targetPort: 53
  type: LoadBalancer
