app-in-apps/yaml/template/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: placeholder-ingress
  namespace: placeholder
  labels:
    app: placeholder
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: placeholder.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: placeholder-service-ingress
                port:
                  name: adminpanel
  tls:
    - hosts:
        - placeholder.nexus-core.dev
      secretName: placeholder-ingress-secret
